--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alternative-facts-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://frankwalter2.github.io/alternative-facts-game-2/",
+  "homepage": "https://alternativefactsgame.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
